--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,8 +7,8 @@
                 {% include sns-links.html center=true %}
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | <a href="/license/">License</a>
+                    | <a href="/wiki/">Wiki</a>
                     | <a href="https://blog.zinglix.xyz{{page.url}}">Mirror</a>
-
                     <br>
                     <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
                     <img src="/img/beian.png" />
@@ -51,7 +51,7 @@
     }
 </script>
 
-{% if page.title == 'Archive' or page.title == 'Papernote' %}
+{% if page.tagcloud %}
 <!-- jquery.tagcloud.js -->
 <script>
     async('{{ "/js/jquery.tagcloud.js" | prepend: site.baseurl }}', function () {
