--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,13 +23,13 @@
                     <li>
                         <a href="{{ site.baseurl }}/">Home</a>
                     </li>             
-                    {% for page in site.pages %}
+                    {%- for page in site.pages -%}
                     {% if page.title and page.hide-in-nav != true %}
                     <li>
                         <a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
                     </li>
                     {% endif %}
-                    {% endfor %}
+                    {%- endfor -%}
                         <li class="search-icon">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-search"></i>
