--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -95,7 +95,9 @@
     gtag('config', '{{ site.gtag_id }}');
 </script>
 {% endif %}
-
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "952f39ffb03640978b50e753f283b4a5"}'></script>
+<!-- End Cloudflare Web Analytics -->
 <!-- Baidu Analytics -->
 <script>
     var _hmt = _hmt || [];
