migrate to jsdelivr

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,19 +28,19 @@
 
 
     <!-- Web App Manifest -->
-    <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json">
+    <!-- <link rel="manifest" href="{{ site.baseurl }}/pwa/manifest.json"> -->
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ " /css/bootstrap.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.2/dist/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ " /css/hux-blog.2.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ " /css/hux-blog.min.css" | prepend: site.baseurl }}">
 
     <!-- Custom Fonts -->
-    <link href="/css/iconfont.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="/css/iconfont.min.css" rel="stylesheet" type="text/css"> -->
 
     <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.min.css" rel="stylesheet"
         type="text/css">
