--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -113,7 +113,7 @@ layout: default
 </script>
 <!-- anchor-js, Doc:http://bryanbraun.github.io/anchorjs/ -->
 <script>
-    async("/js/anchor.min.js", function () {
+    async("https://cdn.jsdelivr.net/npm/anchor-js@1.2.1/anchor.min.js", function () {
         anchors.options = {
             visible: 'hover',
             placement: 'right',
