--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,12 +27,12 @@
 <!-- jQuery -->
 <!-- <script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script> -->
 <!-- script pointing to jekyll-search.js -->
-<script src="/js/simple-jekyll-search.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/simple-jekyll-search@1.4.1/dest/simple-jekyll-search.min.js"></script>
 <!-- Bootstrap Core JavaScript -->
 <!-- <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script> -->
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ " /js/hux-blog.1.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
 <!-- Service Worker -->
 {% if site.service-worker %}
 <script src="{{ " /js/snackbar.js" | prepend: site.baseurl }}"></script>
