--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 	{% include nav.html %}
     {% include search.html %}
     {{ content }}
+    {% include pretty-cat.html %}
     {% include footer.html %}     
 </body>
 
