--- a/_includes/pretty-cat.html
+++ b/_includes/pretty-cat.html
@@ -1,6 +1,6 @@
 <div id="pretty-cat" class="pretty-cat" style="position: fixed; left: 0px; bottom: 0px; width: 220px; z-index: 99999; opacity: 1;">
 
- <svg id="a-cat" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 787.3 433.8" style="transform: rotateY(180deg);">
+ <svg id="a-cat" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 787.3 433.8" style="transform: rotateY(180deg); display: none;">
       <defs>
         <symbol id="eye" data-name="eye" viewBox="0 0 19.2 18.7">
           <circle cx="9.4" cy="9.1" r="8"></circle>
