--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -97,19 +97,10 @@
 {% endif %}
 {% if site.cf_token %}
 <!-- Cloudflare Web Analytics -->
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "{{ site.cf_token }}"}'></script>
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "{{ site.cf_token }}"}'></script>
 <!-- End Cloudflare Web Analytics -->
 {% endif %}
-<!-- Baidu Analytics -->
-<script>
-    var _hmt = _hmt || [];
-    (function () {
-        var hm = document.createElement("script");
-        hm.src = "https://hm.baidu.com/hm.js?a8bd3341a9998d43a16c2e4a638f0f82";
-        var s = document.getElementsByTagName("script")[0];
-        s.parentNode.insertBefore(hm, s);
-    })();
-</script>
 <!-- Side Catalog -->
 {% if page.catalog %}
 <script type="text/javascript">
