--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -122,6 +122,8 @@ layout: default
         anchors.add().remove('.intro-header h1').remove('.subheading').remove('.sidebar-container h5');
     })
 </script>
+<script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.6/dist/medium-zoom.min.js"></script>
+<script>mediumZoom(document.querySelectorAll('div.post-container img'), { background: 'rgba(1,1,1,0.8)' })</script>
 <style>
     /* place left on bigger screen */
     @media all and (min-width: 800px) {
