feature: add back to top button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -161,6 +161,16 @@
     });
 </script>
 {% endif %}
+<script>
+window.onscroll = function() {scrollFunction()};
+function scrollFunction() {
+  if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
+    $(".back-to-top").addClass('visible');
+  } else {
+    $(".back-to-top").removeClass("visible")
+  }
+}
+</script>
 <!-- Multi-Lingual -->
 {% if page.multilingual %}
 <!-- Handle Language Change -->
