--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     {% include search.html %}
     {{ content }}
     {% include pretty-cat.html %}
+    {% include back-to-top.html %}
     {% include footer.html %}     
 </body>
 
