add featured link

--- a/_includes/featured-tags.html
+++ b/_includes/featured-tags.html
@@ -11,6 +11,8 @@
     <div class="tags">
         <a href="{{ site.baseurl }}/papernote/" title="论文笔记"
             >论文笔记
+        </a><a href="{{ site.baseurl }}/wiki/" title="各种零碎的知识"
+            >Wiki
         </a>
         {%- capture tags -%}
         {%- for tag in site.tags -%}{%- if tag[1].size > site.featured-condition-size -%}
