--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,8 @@
                 <!-- SNS Link -->
                 {% include sns-links.html center=true %}
                 <p class="copyright text-muted">
-                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} | <a href="/license/">License</a>
-                    | <a href="/wiki/">Wiki</a>
+                    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} 
+                    | <a href="/license/">License</a>
                     | <a href="https://blog.zinglix.xyz{{page.url}}">Mirror</a>
                     <br>
                     <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
