--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,9 @@
                     </li>
                     {% endif %}
                     {%- endfor -%}
+                    <li>
+                        <a href="https://travellings.link">Travelling</a>
+                    </li>
                         <li class="search-icon">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-search"></i>
