--- a/_includes/friends.html
+++ b/_includes/friends.html
@@ -1,6 +1,6 @@
 <hr>
 {% if site.friends %}
-<h5>FRIENDS</h5>
+<h5>FEATURED LINK</h5>
 <ul class="list-inline">
   {% for friend in site.friends %}
   <li><a href="{{friend.href}}">{{friend.title}}</a></li>
