--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,7 +31,7 @@
                     {% endif %}
                     {%- endfor -%}
                     <li>
-                        <a href="https://travellings.link">Travelling</a>
+                        <a href="https://travellings.link"><i class="fa fa-subway"></i> Travelling</a>
                     </li>
                         <li class="search-icon">
                             <a href="javascript:void(0)">
