--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,12 +33,7 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ " /js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ " /js/snackbar.js" | prepend: site.baseurl }}"></script>
-<!-- Service Worker -->
-{% if site.service-worker %}
-<script src="{{ " /js/snackbar.js" | prepend: site.baseurl }}"></script>
-{% endif %}
-
+<script src="{{ " /js/snackbar.1.js" | prepend: site.baseurl }}"></script>
 
 <!-- async load function -->
 <script>
@@ -280,47 +275,5 @@ function scrollFunction() {
         });
     });
 
-    window.onload = function () {
-        var loadTime = window.performance.timing.domContentLoadedEventEnd-window.performance.timing.navigationStart; 
-        var lastNoticeTime = localStorage.getItem('lastNoticeTime');
-        var slowNoticeTime = localStorage.getItem('slowNoticeTime');
-
-        if (window.location.origin != "{{site.url}}"){
-            if(loadTime>3000){
-                if(slowNoticeTime==null || Math.floor(Date.now() / 1000) - parseInt(slowNoticeTime)>60){
-                    localStorage.setItem('slowNoticeTime', Math.floor(Date.now() / 1000));
-                    createSnackbar({
-                        message: "您正在访问镜像站点，还是慢？",
-                        actionText:"查看所有镜像",
-                        action: function(e){window.location = "/mirror"},
-                        duration: 8000
-                    });
-                }
-            }else{
-                if(lastNoticeTime==null || Math.floor(Date.now() / 1000) - parseInt(lastNoticeTime)>60*60){
-                    localStorage.setItem('lastNoticeTime', Math.floor(Date.now() / 1000));
-                    createSnackbar({
-                        message: "注意: 您正在访问镜像站点。返回主站？",
-                        actionText: "Go",
-                        action: function(e){window.location = "{{site.url}}{{page.url}}"},
-                        duration: 3000,
-                    });
-                }
-                
-
-            }
-        }else{
-            if(loadTime>3000){
-                if(slowNoticeTime==null || Math.floor(Date.now() / 1000) - parseInt(slowNoticeTime)>60){
-                    localStorage.setItem('slowNoticeTime', Math.floor(Date.now() / 1000));
-                    createSnackbar({
-                        message: "访问过慢？试试镜像站点？",
-                        actionText:"Go",
-                        action: function(e){window.location = "https://blog.zinglix.xyz{{page.url}}"},
-                        duration: 8000
-                    });
-                }
-            }
-        }
-    }
+    
 </script>
