remove unrelated information on mirror site

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,4 +51,5 @@
     <script data-ad-client="{{ site.google_adsense_id }}" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     {% endif %}
+    <script src="{{ " /js/snackbar.2.js" | prepend: site.baseurl }}"></script>
 </head>
