--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,11 +10,13 @@
                     | <a href="/license/">License</a>
                     | <a href="https://blog.zinglix.xyz{{page.url}}">Mirror</a>(<a href="/mirror">s</a>)
                     <br>
-                    <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
+                    <!-- 注意！你正在访问镜像站点！<a onclick="">前往主站</a> -->
+                    <script>document.write(getFooter())</script>
+                    <!-- <a href="http://beian.miit.gov.cn">沪ICP备18012603号-1</a>
                     <img src="/img/beian.png" />
                     <a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=31011002004677">沪公网安备
                         31011002004677 号
-                    </a>
+                    </a> -->
                     <br>
                     Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a
                         href="http://huangxuan.me">Hux</a>
@@ -33,7 +35,7 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ " /js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ " /js/snackbar.1.js" | prepend: site.baseurl }}"></script>
+
 
 <!-- async load function -->
 <script>
