--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,7 +22,7 @@
 <!-- jQuery -->
 <!-- <script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script> -->
 <!-- script pointing to jekyll-search.js -->
-<script src="https://cdn.jsdelivr.net/npm/simple-jekyll-search@1.4.1/dest/simple-jekyll-search.min.js"></script>
+<script src="/js/simple-jekyll-search.min.js"></script>
 <!-- Bootstrap Core JavaScript -->
 <!-- <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script> -->
 
