--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,7 +34,7 @@
     <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ " /css/hux-blog.min.4.css" | prepend: site.baseurl }}">
@@ -42,10 +42,10 @@
     <!-- Custom Fonts -->
     <!-- <link href="/css/iconfont.min.css" rel="stylesheet" type="text/css"> -->
 
-    <link href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.min.css" rel="stylesheet"
+    <link href="https://cdn.staticfile.org/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"
         type="text/css">
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
 
     {% if site.google_adsense_id %}
     <script data-ad-client="{{ site.google_adsense_id }}" async
