--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                     | <a href="https://blog.zinglix.xyz{{page.url}}">Mirror</a>(<a href="/mirror">s</a>)
                     <script>document.write(getFooter())</script>
                     <br>
-                    Email: <a href="mailto:{{ site.email }}">{{ site.email }}</a> | Theme by <a
+                    Email: <a class="eml-protected" href="#" encoded="{{ site.email }}" ></a> | Theme by <a
                         href="http://huangxuan.me">Hux</a>
                 </p>
             </div>
@@ -27,7 +27,7 @@
 <!-- <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script> -->
 
 <!-- Custom Theme JavaScript -->
-<script src="{{ " /js/hux-blog.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ " /js/hux-blog.1.min.js" | prepend: site.baseurl }}"></script>
 
 
 <!-- async load function -->
@@ -47,7 +47,6 @@
 <script>
     async('{{ "/js/jquery.tagcloud.js" | prepend: site.baseurl }}', function () {
         $.fn.tagcloud.defaults = {
-            //size: {start: 1, end: 1, unit: 'em'},
             color: { start: '#bbbbee', end: '#2f93b4' },
         };
         $('#tag_cloud a').tagcloud();
@@ -59,11 +58,8 @@
 <!-- Google Analytics -->
 {% if site.ga_track_id %}
 <script>
-    // dynamic User by Hux
     var _gaId = '{{ site.ga_track_id }}';
     var _gaDomain = '{{ site.ga_domain }}';
-
-    // Originial
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
             (i[r].q = i[r].q || []).push(arguments)
@@ -96,21 +92,18 @@
 {% if page.catalog %}
 <script type="text/javascript">
     function generateCatalog(selector) {
-        // interop with multilangual 
         if ('{{ page.multilingual }}' == 'true') {
             _containerSelector = 'div.post-container.active'
         } else {
             _containerSelector = 'div.post-container'
         }
 
-        // init
         var P = $(_containerSelector), a, n, t, l, i, c;
         {% if page.cataloglimit %}
         a = P.find('h1,h2,h3');
         {% else if %}
         a = P.find('h1,h2,h3,h4,h5,h6');
         {% endif %}
-        // clean
         $(selector).html('')
         a.each(function () {
             n = $(this).prop('tagName').toLowerCase();
@@ -125,16 +118,11 @@
 
     generateCatalog(".catalog-body");
 
-    // toggle side catalog
     $(".catalog-toggle").click((function (e) {
         e.preventDefault();
         $('.side-catalog').toggleClass("fold")
     }))
 
-    /*
-     * Doc: https://github.com/davist11/jQuery-One-Page-Nav
-     * Fork by Hux to support padding
-     */
     async("{{ '/js/jquery.nav.js' | prepend: site.baseurl }}", function () {
         $('.catalog-body').onePageNav({
             currentClass: "active",
@@ -152,54 +140,32 @@
     });
 </script>
 {% endif %}
-<script>
-window.onscroll = function() {scrollFunction()};
-function scrollFunction() {
-  if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-    $(".back-to-top").addClass('visible');
-  } else {
-    $(".back-to-top").removeClass("visible")
-  }
-}
-</script>
 <!-- Multi-Lingual -->
 {% if page.multilingual %}
 <!-- Handle Language Change -->
 <script type="text/javascript">
-    // get nodes
     var $zh = document.querySelector(".zh");
     var $en = document.querySelector(".en");
     var $select = document.querySelector("select");
 
-    // bind hashchange event
-    // Changes at v1.7.2: change the language flag from hash-basing to in-memory basing
-    // due to its confliction with catalog anchors.
-    // window.addEventListener('hashchange', _render);
-
-    // handle render
     function _render(_hash) {
         var _hash = _hash || window.location.hash;
-        // en
         if (_hash == "#en") {
             $select.selectedIndex = 1;
             $en.style.display = "block";
             $en.classList.add("active");
             $zh.style.display = "none";
             $zh.classList.remove("active");
-            // zh by default
         } else {
-            // not trigger onChange, otherwise cause a loop call.
             $select.selectedIndex = 0;
             $zh.style.display = "block";
             $zh.classList.add("active");
             $en.style.display = "none";
             $en.classList.remove("active");
         }
-        // interop with catalog 
         if ("{{ page.catalog }}") generateCatalog(".catalog-body");
     }
 
-    // handle select change
     function onLanChange(index) {
         if (index == 0) {
             _hash = "#zh"
@@ -209,66 +175,6 @@ function scrollFunction() {
         _render(_hash)
     }
 
-    // init
     _render();
 </script>
 {% endif %}
-<!-- Simple Jekyll Search -->
-<script>
-    // https://stackoverflow.com/questions/1912501/unescape-html-entities-in-javascript
-    function htmlDecode(input) {
-        var e = document.createElement('textarea');
-        e.innerHTML = input;
-        // handle case of empty input
-        return e.childNodes.length === 0 ? "" : e.childNodes[0].nodeValue;
-    }
-
-    SimpleJekyllSearch({
-        searchInput: document.getElementById('search-input'),
-        resultsContainer: document.getElementById('search-results'),
-        json: '/search.json',
-        searchResultTemplate: '<div class="post-preview item"><a href="{url}"><h2 class="post-title">{title}</h2><h3 class="post-subtitle">{subtitle}</h3><hr></a></div>',
-        noResultsText: 'No results',
-        limit: 50,
-        fuzzy: false,
-        // a hack to get escaped subtitle unescaped. for some reason, 
-        // post.subtitle w/o escape filter nuke entire search.
-        templateMiddleware: function (prop, value, template) {
-            if (prop === 'subtitle' || prop === 'title') {
-                if (value.indexOf("code")) {
-                    return htmlDecode(value);
-                } else {
-                    return value;
-                }
-            }
-        }
-    });
-
-    $(document).ready(function () {
-        var $searchPage = $('.search-page');
-        var $searchOpen = $('.search-icon');
-        var $searchClose = $('.search-icon-close');
-        var $searchInput = $('#search-input');
-        var $body = $('body');
-
-        $searchOpen.on('click', function (e) {
-            e.preventDefault();
-            $searchPage.toggleClass('search-active');
-            var prevClasses = $body.attr('class') || '';
-            setTimeout(function () {
-                $body.addClass('no-scroll');
-            }, 400)
-
-            if ($searchPage.hasClass('search-active')) {
-                $searchClose.on('click', function (e) {
-                    e.preventDefault();
-                    $searchPage.removeClass('search-active');
-                    $body.attr('class', prevClasses);  // from closure 
-                });
-                $searchInput.focus();
-            }
-        });
-    });
-
-    
-</script>
