--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
     <!-- Custom Fonts -->
     <!-- <link href="/css/iconfont.min.css" rel="stylesheet" type="text/css"> -->
 
-    <link href="https://cdn.staticfile.org/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"
+    <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"
         type="text/css">
 
     <script src="/js/jquery.min.js"></script>
