--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,10 +3,10 @@ layout: default
 ---
 {% if site.page-mathjax %}
 <script async
-    src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 {% endif %}
 {% if site.page-mermaid %}
-<script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/mermaid/8.9.0/mermaid.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.9.0/mermaid.min.js"></script>
 <script>
     const conf = {
         startOnLoad: true,
