--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
     <!-- Custom Fonts -->
     <!-- <link href="/css/iconfont.min.css" rel="stylesheet" type="text/css"> -->
 
-    <link href="/css/font-awesome.5.13.1.css" rel="stylesheet"
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"
         type="text/css">
 
     <script src="/js/jquery.min.js"></script>
